log
   Compiling mbdmbd v0.1.0 (/storage/liam/secret-project/mbdmbd)
warning: unused import: `Sequence`
 --> src/import_functions.rs:4:35
  |
4 | use super::{FilePath, Nanopolish, Sequence, TidGid, GtfExons};
  |                                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the size for values of type `str` cannot be known at compilation time
 --> src/import_functions.rs:8:6
  |
8 |     let fa_path = *file.path;
  |         ^^^^^^^ doesn't have a size known at compile-time
  |
  = help: the trait `Sized` is not implemented for `str`
  = note: all local variables must have a statically known size
  = help: unsized locals are gated as an unstable feature

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> src/import_functions.rs:11:24
   |
11 |         std::io::Cursor::new(fa_path), 
   |         -------------------- ^^^^^^^ doesn't have a size known at compile-time
   |         |
   |         required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `std::io::Cursor::<T>::new`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> src/import_functions.rs:11:3
   |
10 |     let mut faidx = IndexedReader::new(
   |                     ------------------ required by a bound introduced by this call
11 |         std::io::Cursor::new(fa_path), 
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `std::io::Cursor`

error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> src/import_functions.rs:10:18
    |
10  |     let mut faidx = IndexedReader::new(
    |                     ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
    = note: required because of the requirements on the impl of `std::io::Read` for `std::io::Cursor<str>`
note: required by a bound in `IndexedReader::<R>::new`
   --> /home/liam/.cargo/registry/src/github.com-1ecc6299db9ec823/bio-1.0.0/src/io/fasta.rs:424:9
    |
424 | impl<R: io::Read + io::Seek> IndexedReader<R> {
    |         ^^^^^^^^ required by this bound in `IndexedReader::<R>::new`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> src/import_functions.rs:10:18
   |
10 |       let mut faidx = IndexedReader::new(
   |  _____________________^
11 | |         std::io::Cursor::new(fa_path), 
12 | |         std::io::Cursor::new(fai_path),
13 | |     ).expect("issue with the fa files or the index");
   | |_____^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `std::io::Cursor`

error[E0599]: the method `read` exists for struct `IndexedReader<std::io::Cursor<str>>`, but its trait bounds were not satisfied
  --> src/import_functions.rs:16:8
   |
16 |       faidx.read(&mut seq).expect("Couldn't read the interval");
   |             ^^^^ method cannot be called on `IndexedReader<std::io::Cursor<str>>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `std::io::Cursor<str>: std::io::Read`
           `std::io::Cursor<str>: Seek`

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `mbdmbd` (bin "mbdmbd") generated 1 warning
error: could not compile `mbdmbd` due to 6 previous errors; 1 warning emitted
